Add parallel CSV chunk processor with tests
Introduce `CsvChunkProcessor` for parallel large CSV processing.
Includes logic for file chunking, virtual threads, and error handling.

- Adds unit tests for `CsvChunkProcessor` and `CsvObservationProducer`.
- Ensures no circular dependencies are introduced.
- Improves performance for large file ingestion.
```